[package]
name = "port-finder"
version = "0.1.0"
edition = "2021"
description = "Cross-platform port management CLI"
license = "MIT"
repository = "https://github.com/ItamiForge/port-finder"
readme = "README.md"
keywords = ["ports", "network", "cli", "tui"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "pf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
netstat2 = "0.9"
anyhow = "1.0"
colored = "2"
copypasta = "0.10.2"
